force-app/main/default/objects/BuxBalance__c/BuxBalance__c.object-meta.xml
<CustomObject>
    <label>BuxBalance</label>
    <nameField>
        <displayFormat>BAL-{0000}</displayFormat>
        <label>BuxBalance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BuxBalances</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>