force-app/main/default/objects/BuxBalance__c/fields/Balance_Being_Special__c.field-meta.xml
<CustomField>
    <fullName>Balance_Being_Special__c</fullName>
    <defaultValue>0+0</defaultValue>
    <label>Balance Being Special</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>