force-app/main/default/objects/BuxBalance__c/fields/Balance_Life_Or_Death__c.field-meta.xml
<CustomField>
    <fullName>Balance_Life_Or_Death__c</fullName>
    <defaultValue>0+0</defaultValue>
    <label>Balance Life Or Death</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>