force-app/main/default/objects/BuxBalance__c/fields/BalanceTotal__c.field-meta.xml
<CustomField>
    <fullName>BalanceTotal__c</fullName>
    <defaultValue>0+0</defaultValue>
    <label>Balance Total</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>