force-app/main/default/objects/BuxBalance__c/fields/BoxLiveOrDie__c.field-meta.xml
<CustomField>
    <fullName>BoxLiveOrDie__c</fullName>
    <defaultValue>0+0</defaultValue>
    <label>Box Live Or Die</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>