force-app/main/default/objects/BuxBalance__c/fields/BoxYOLO__c.field-meta.xml
<CustomField>
    <fullName>BoxYOLO__c</fullName>
    <defaultValue>0+0</defaultValue>
    <label>Box YOLO</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>